<resources>

    <string name="app_name">My Twin</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="RecordarTarea">Recordar Tarea</string>
    <string name="title_create1">Create1</string>
    <string name="title_create2">Create2</string>
    <string name="title_tarea">Tarea</string>
    <string name="title_NuevaTarea">Nueva Tarea</string>
    <string name="title_MenuTarea">MenuTareas</string>
    <string name="str_tarea">Tarea :</string>
    <string name="str_txttarea"></string>
    <string name="str_starRecord"></string>
    <string name="str_espacio"></string>
    <string name="str_title">Creating</string>
    <string name="str_regresar">Regresar</string>
    <string name="str_sgte"></string>
    <string name="str_smile"></string>
    <string name="str_angry"></string>
    <string name="str_sad"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prueba">KMCB</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="vacio"></string>
    <string name="title_activity_nueva__tarea">Nueva_Tarea</string>
    <string name="str_ajustes"></string>
    <string name="str_menu">Tareas</string>
    <string name="str_mm">Hernan</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lista_tareas">ListaTareas</string>
    
    <string name="TareaMenu">Tareas</string>
    <string name="ModificarMenu">Modificar</string>
    <string name="ProgramarMenu">Telefono</string>
    <string name="exitOption">Exit</string>
    <string name="str_Modo">Modo</string>
    <string name="str_Wifi">WIFI On/Off</string>
    <string name="str_Stop">STOP</string>
    <string name="str_gps">GPS On/Off</string>
    <string name="str_sexo">SEXO</string>

</resources>